[gd_scene load_steps=3 format=3 uid="uid://c8t0iaaiqq0t"]

[ext_resource type="Script" uid="uid://brmj82ynit8s2" path="res://Main logic/options_editor.gd" id="1_l2uwi"]
[ext_resource type="StyleBox" uid="uid://cyap5lsbo81cr" path="res://UI/panel.tres" id="2_wr5n8"]

[node name="Control" type="Control" node_paths=PackedStringArray("fov_slider", "MS_slider", "JS_slider", "Rend_method_option", "fps_option", "fov_label", "ms_label", "js_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_l2uwi")
fov_slider = NodePath("Panel2/TabContainer/Video/Panel/VBoxContainer/fov")
MS_slider = NodePath("Panel2/TabContainer/Controls/Panel/VBoxContainer/ms")
JS_slider = NodePath("Panel2/TabContainer/Controls/Panel/VBoxContainer/js")
Rend_method_option = NodePath("Panel2/TabContainer/Video/Panel/VBoxContainer/Rmethod")
fps_option = NodePath("Panel2/TabContainer/Video/Panel/VBoxContainer/fps")
fov_label = NodePath("Panel2/TabContainer/Video/Panel/VBoxContainer/fov/Label")
ms_label = NodePath("Panel2/TabContainer/Controls/Panel/VBoxContainer/ms/Label3")
js_label = NodePath("Panel2/TabContainer/Controls/Panel/VBoxContainer/js/Label4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -337.0
offset_top = -245.5
offset_right = 337.0
offset_bottom = 245.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_wr5n8")

[node name="TabContainer" type="TabContainer" parent="Panel2"]
texture_filter = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -277.0
offset_top = -213.0
offset_right = 277.0
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 1
clip_tabs = false

[node name="Video" type="TabBar" parent="Panel2/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="Panel" type="Panel" parent="Panel2/TabContainer/Video"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_wr5n8")

[node name="VBoxContainer" type="GridContainer" parent="Panel2/TabContainer/Video/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = -43.0
offset_right = 166.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 42
columns = 2

[node name="Label" type="Label" parent="Panel2/TabContainer/Video/Panel/VBoxContainer"]
layout_mode = 2
text = "Renderer method:"

[node name="Rmethod" type="OptionButton" parent="Panel2/TabContainer/Video/Panel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
selected = 0
item_count = 3
popup/item_0/text = "forward_plus"
popup/item_0/id = 0
popup/item_1/text = "mobile"
popup/item_1/id = 1
popup/item_2/text = "gl_compatibility"
popup/item_2/id = 2

[node name="Label2" type="Label" parent="Panel2/TabContainer/Video/Panel/VBoxContainer"]
layout_mode = 2
text = "Fps:"

[node name="fps" type="OptionButton" parent="Panel2/TabContainer/Video/Panel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
selected = 6
item_count = 7
popup/item_0/text = "30Hz"
popup/item_0/id = 30
popup/item_1/text = "45HZ"
popup/item_1/id = 45
popup/item_2/text = "60Hz"
popup/item_2/id = 60
popup/item_3/text = "75Hz"
popup/item_3/id = 75
popup/item_4/text = "90Hz"
popup/item_4/id = 90
popup/item_5/text = "120Hz"
popup/item_5/id = 120
popup/item_6/text = "Unlimited"
popup/item_6/id = 0

[node name="Label3" type="Label" parent="Panel2/TabContainer/Video/Panel/VBoxContainer"]
layout_mode = 2
text = "FOV:"

[node name="fov" type="HSlider" parent="Panel2/TabContainer/Video/Panel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
min_value = 50.0
value = 100.0
rounded = true

[node name="Label" type="Label" parent="Panel2/TabContainer/Video/Panel/VBoxContainer/fov"]
layout_mode = 0
offset_left = 109.0
offset_top = -4.0
offset_right = 142.0
offset_bottom = 22.0
theme_override_font_sizes/font_size = 15
text = "75
"

[node name="Controls" type="TabBar" parent="Panel2/TabContainer"]
layout_mode = 2
metadata/_tab_index = 1

[node name="Panel" type="Panel" parent="Panel2/TabContainer/Controls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="GridContainer" parent="Panel2/TabContainer/Controls/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -43.0
offset_right = 34.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 25
columns = 2

[node name="Label" type="Label" parent="Panel2/TabContainer/Controls/Panel/VBoxContainer"]
layout_mode = 2
text = " Mouse Sensitivity"

[node name="ms" type="HSlider" parent="Panel2/TabContainer/Controls/Panel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 50.0

[node name="Label3" type="Label" parent="Panel2/TabContainer/Controls/Panel/VBoxContainer/ms"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -13.0
offset_right = 30.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
text = "0"

[node name="Label2" type="Label" parent="Panel2/TabContainer/Controls/Panel/VBoxContainer"]
layout_mode = 2
text = "Joystick Sensitivity"

[node name="js" type="HSlider" parent="Panel2/TabContainer/Controls/Panel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 50.0

[node name="Label4" type="Label" parent="Panel2/TabContainer/Controls/Panel/VBoxContainer/js"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 60.0
offset_top = -13.0
offset_right = 200.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "0"

[node name="Label3" type="Label" parent="Panel2/TabContainer/Controls/Panel/VBoxContainer"]
layout_mode = 2
text = "
Run:
Inventory:
Item Wheel:
Pick Up Item:
Drop Item:
Chat:
Hit:
Use:
Gamemode Switch:
Go to Menu:
"

[node name="Label4" type="Label" parent="Panel2/TabContainer/Controls/Panel/VBoxContainer"]
layout_mode = 2
text = "Ctrl
E
Alt
Q
F
`
LMB
RMB
G
Home"

[node name="Button" type="Button" parent="Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 209.0
offset_top = -174.0
offset_right = 259.0
offset_bottom = -143.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[connection signal="item_selected" from="Panel2/TabContainer/Video/Panel/VBoxContainer/Rmethod" to="." method="_on_rmethod_item_selected"]
[connection signal="item_selected" from="Panel2/TabContainer/Video/Panel/VBoxContainer/fps" to="." method="_on_fps_item_selected"]
[connection signal="value_changed" from="Panel2/TabContainer/Video/Panel/VBoxContainer/fov" to="." method="_on_fov_drag_ended"]
[connection signal="value_changed" from="Panel2/TabContainer/Controls/Panel/VBoxContainer/ms" to="." method="_on_ms_drag_ended"]
[connection signal="value_changed" from="Panel2/TabContainer/Controls/Panel/VBoxContainer/js" to="." method="_on_js_drag_ended"]
[connection signal="button_down" from="Panel2/Button" to="." method="hide_self"]
